<resources>
    <string name="app_name">FloVind</string>
    <string name="app_bar_title" translatable="false"><font color='#469fcc'>_Flo</font><font color='#62b4ae'>Vind }</font></string>
    <string name="app_version" translatable="false">1.01</string>
    <string name="authority" translatable="false">com.solutions.grutne.flovind.data.TidesDataProvider</string>
    <string name="language">en</string>
    <string name="connection_error">Unable to load content. Check your network connection.</string>
    <string name="xml_error">Error parsing XML.</string>
    <string name="flag_format" formatted="true" translatable="true">%s TIDE</string>
    <string name="level_format" formatted="true" translatable="true">%s cm</string>
    <string name="no_location_detected">
        No location detected.\nLocation Set to Oslo.
    </string>
    <string name="address_unavailable" translatable="true">Address unavailable</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="error_unknown">"Unknown Error"</string>
    <string name="conditions_label">View conditions</string>
    <!--    Styling & Prefs   -->
    <string name="map_pref_key">mapStyleKey</string>
    <string name="map_type_label">Map type</string>
    <string name="map_type_def_value">1</string>
    <string name="map_type_normal">Normal (has styles)</string>
    <string name="map_type_satellite">Satellite</string>
    <string name="map_type_hybrid">Hybrid</string>
    <string name="map_type_terrain">Terrain</string>
    <string name="map_type_none">No Map</string>
    <string name="map_style_label">Map Style</string>
    <string name="styled_map_demo_label">Styled Map</string>
    <string name="styled_map_demo_description">Demonstrates how to style a map.</string>
    <string name="style_label_retro">Retro</string>
    <string name="style_label_night">Night</string>
    <string name="style_label_grayscale">Grayscale</string>
    <string name="style_label_no_pois_no_transit" translatable="false">No POIs or transit</string>
    <string name="style_label_default">Default</string>
    <string name="style_choose">Choose style</string>
    <string name="style_set_to">Style set to: %1$s</string>
    <string name="map_zoom_def_value" translatable="false">10</string>
    <string name="pref_map_type_key" translatable="false">map_type</string>
    <string name="pref_enable_notifications_key" translatable="false">enable_notify</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_low_label">Notify next low tide</string>
    <string name="pref_enable_notifications_high_label">Notify next low tide</string>
    <string name="offset_label">Low Tide offset</string>
    <string name="one_hour">One hour ahead</string>
    <string name="two_hours">Two hours ahead</string>
    <string name="three_hours">Three hours ahead</string>
    <string name="four_hours">Four hours ahead</string>
    <string name="notify_hours_default" translatable="false">3</string>
    <string name="notify_hours_key" translatable="false">notify_hours</string>
    <string name="pref_header_about">About</string>
    <string name="title_version">Version</string>
    <string name="notification_label">Notifications</string>
    <string name="map_category_label">Map</string>

    <string name="notification_low_tide_content_title" translatable="true">Low Tide Alert!</string>
    <string name="notification_low_tide_content_text">"Sea level at its lowest point at $s o'clock.\nWater level: $s cm."</string>
    <!--    Content Description    -->
    <string name="content_desc_location" translatable="false">Location name</string>
    <string name="content_desc_date" translatable="false">Date</string>
    <string name="content_desc_tide_flag" translatable="false">Tide flag</string>
    <string name="content_desc_tide_time" translatable="false">Time of tide</string>
    <string name="content_desc_tide_level" translatable="false">Water level in cm</string>
    <string name="content_desc_tide_img" translatable="false">Tide flag image</string>
    <string name="content_desc_location_icon" translatable="false">Reset Location</string>
    <string name="content_desc_previous_day" translatable="false">Previous day</string>
    <string name="content_desc_next_day" translatable="false">Next day</string>
    <string name="content_desc_error" translatable="false">Error message</string>
</resources>
